--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.20.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tsparticles": "^3.0.2",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
