--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5",
     "tsparticles": "^3.0.2",
     "typed.js": "^2.1.0"
   },
